--- a/token.env
+++ b/token.env
@@ -1,1 +1,1 @@
-token=MTE0NDg4MjYyMDE1NzY2MTI4NQ.GbTvNt.hlsQzk9F6faYi4WSjQxytI7bBB6BUH6u0JQmA8
+token=MTE0NDg4MjYyMDE1NzY2MTI4NQ.G73iIF.lL6rw8T9FZmbWQjrQQU660e4bSNYIfGPvp6UaM
